Fixing spacing on bigger displays

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ ul {
 
 .hero-content {
     display: flex;
+    justify-content: space-between;
 }
 
 .hero-left {
